routing setting up

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --background: #171717;
-  --foreground: #a3a3a3;
+  --foreground: #979797;
 }
 
 /* @media (prefers-color-scheme: dark) {
